MDEV-5117: Explain for a query executed as a PS is not written into the slow log - Save the query plan after the statement was executed so that its gets into   the slow query log.